Progress bar border

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 			.progress-bar
 			{
 				background-color:#33c18b;
-				
 			}
 			.progress
 			{
 				height:10px;
+				border: 1px solid #e2c612;
 			}
 			#education
 			{
