--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 	<head>
 		<title>Hardik S. Rana</title>
+		
 		<script>
-			//Add Google Analytics
+			
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+		  ga('create', 'UA-79783609-1', 'auto');
+		  ga('send', 'pageview');
 			
 		</script>
+		
 		<meta charset="utf-8">
 		<meta name="description" content="Hardik Rana Portfolio">
 		<meta name="author" content="Hardik Rana">
@@ -58,7 +67,7 @@
 			#profile
 			{
 				    margin-top: 4%;
-					background-color: #13836c;
+					background-color: #08524b;
 			}
 			#profile img{
 				float: left;
@@ -101,7 +110,7 @@
 			{
 				text-align: center;
 				color: #FFFFFF;
-				background-color: #13836c;
+				background-color: #08524b;
 		
 			}
 			#education p
@@ -125,7 +134,7 @@
 			}
 			#contact
 			{
-				background-color: #13836c;
+				background-color: #08524b;
 			}
 			.navbar-default
 			{
@@ -206,7 +215,7 @@
 	</head>
 	<body>
 
-		<div id="myNav" class="overlay">
+	<!--	<div id="myNav" class="overlay">
 		  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
 			<div class="overlay-content">
 				<a href="#profile" onclick="closeNav()">Profile</a>
@@ -216,13 +225,13 @@
 				<a href="#contact" onclick="closeNav()">Contact</a>
 			</div>
 		</div>
-		<span style="font-size:30px;cursor:pointer" onclick="openNav()">☰ </span>
+		<span style="font-size:30px;cursor:pointer" onclick="openNav()">☰ </span>-->
 
 	
 		<div class="main">
 		
 
-			 <div class="navbar navbar-default navbar-fixed-top">
+			<div class="navbar navbar-default navbar-fixed-top">
 				<div class="container">
 					<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
 						<span class="icon-bar"></span>
@@ -241,7 +250,7 @@
 					</div>
 				</div>
 			</div>
-			
+			<br>
 			<div class="container" id="profile">
 				<h2>Profile</h2>
 				<hr>
@@ -252,11 +261,7 @@
 					<div class="col-sm-7">
 						<br>
 						<p>
-						Hello! My name is Hardik Rana, and I am a senior undergrad student at <a href="http://www.njit.edu/"  target="_blank">
-						New Jersey Institution of Technology</a> pursuing a B.S. Engineering Technology degree in Computer Technology with a specialization in Web Development. I am a self motivated individual who thrives on learning new things and expanding 
-						my knowledge/skills. My skill set consist of various front-end development technologies, ranging from basic HTML to complex Angular.js.
-						
-						
+							Hello! My name is Hardik Rana, and I am a senior undergrad student at<a href="http://www.njit.edu/"> New Jersey Institution of Technology</a> pursuing a B.S. Engineering Technology degree in Computer Technology with a specialization in Web Development. I am a self motivated individual and I am passionate about learning new things and expanding my knowledge/skills. My skill set consist of various front-end development technologies, ranging from basic HTML to complex Angular.js. Please contact me at hardik.srana@gmail.com for my complete resume.	
 						</p>
 					</div>
 				</div>
@@ -500,17 +505,17 @@
 				<hr>
 				<div class="col-sm-4">
 					<p><a href="https://hardik-rana-bootstrap.herokuapp.com/" target="_blank">Responsive Fashion Ecommerce website implemented using Bootstrap.</a></p>
-					<br><p><a href="https://hardik-rana-restaurant.herokuapp.com/index.html" target="_blank">Resturant website that allows users to make reservations created with CSS3 and JavaScript for data validation.</a></p>
+					<br><p><a href="https://hardik-rana-restaurant.herokuapp.com/index.html" target="_blank">Resturant website that allows users to make reservations, created with CSS3 and JavaScript for data validation.</a></p>
 					<br><p><a href="https://hardik-rana-school.herokuapp.com/index.html" target="_blank">A website for Piscataway Township schools implemented with HTML, CSS and jQuery.</a></p>
 				</div>
 				<div class="col-sm-4">			
 					<p><a href="https://hardik-rana-shopping.herokuapp.com/index.html" target="_blank">Static shopping webpage, slider using Javascript.</a></p>
 					<br><p><a href="https://web.njit.edu/~hsr6/Angular/getDataFromDatabase.html" target="_blank">Manipulating a database with simple Javascript, Angular.js, Bootstrap, PHP and SQL.</a></p>
 					<br><p><a href=""></a></p>
-				</div>
-				<div class="col-sm-4">
 					<p><a href="https://hardik-rana-mobile-adaptive.herokuapp.com/index.html" target="_blank">Webpage with mobile and desktop adaptive features, implemented usign media queries.</a></p>
 					<br>
+				</div>
+				<div class="col-sm-4">
 					<p><a href="https://hardik-rana-form-table.herokuapp.com/index.html" target="_blank">An example of a  webpage that allows users to buy tickets for events.</a></p>
 					<br><p><a href="https://hardik-rana-first-project.herokuapp.com/index.html" target="_blank">A webpage template with replaceable content.</a></p>
 				</div>		
