--- a/index.html
+++ b/index.html
@@ -546,10 +546,15 @@
 			<div class="container"  id="contact">
 				<h2>Contact</h2>
 				<hr>
-				<div class="col-sm-4 col-sm-offset-4">
+				<div class="col-sm-4 col-sm-offset-2">
+					<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+					<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="hardik-rana-055421124"><a class="LI-simple-link" href='https://www.linkedin.com/in/hardik-rana-055421124?trk=profile-badge'>Hardik Rana</a></div>
+				</div>
+				<div class="col-sm-4 col-sm-offset-0">
 					<p class="glyphicon glyphicon glyphicon-envelope" aria-hidden="true">
 					Email: hardik.srana@gmail.com
 					</p>
+					<br>
 					<p class="glyphicon glyphicon glyphicon-phone" aria-hidden="true">
 					Phone: 732-372-5091
 					</p>		
