--- a/index.html
+++ b/index.html
@@ -550,9 +550,10 @@
 					<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 					<div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="hardik-rana-055421124"><a class="LI-simple-link" href='https://www.linkedin.com/in/hardik-rana-055421124?trk=profile-badge'>Hardik Rana</a></div>
 				</div>
-				<div class="col-sm-4 col-sm-offset-0">
+				<br>
+				<div class="col-sm-6 col-sm-offset-0">
 					<p class="glyphicon glyphicon glyphicon-envelope" aria-hidden="true">
-					Email: hardik.srana@gmail.com
+					Email: hardik.srana@gmail.com | hsr6@njit.edu
 					</p>
 					<br>
 					<p class="glyphicon glyphicon glyphicon-phone" aria-hidden="true">
