--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 					<div class="col-sm-7">
 						<br>
 						<p>
-							Hello! My name is Hardik Rana, and I am a senior undergrad student at<a href="http://www.njit.edu/"> New Jersey Institution of Technology</a> pursuing a B.S. Engineering Technology degree in Computer Technology with a specialization in Web Development. Currently, I am working at <a href="http://www.rdaltanova.com/">R&D Altanova</a> as a Product Engineer. I am a self motivated individual and extremely passionate about learning new things and expanding my knowledge/skills. My skill set consist of various front-end development technologies, ranging from basic HTML to complex Angular.js. Along with web development, I have a deep understanding of engineering fundamentals. Please contact me at hardik.srana@gmail.com for my complete resume.	  
+							Hello! My name is Hardik Rana. I recently graduated from <a href="http://www.njit.edu/"> New Jersey Institution of Technology</a> where I earned my Bachelor’s in Computer Technology with a specialization in Web Development. Currently, I am working at <a href="http://www.rdaltanova.com/">R&D Altanova</a> as a Product Engineer. I am a self motivated individual and extremely passionate about learning new things and expanding my knowledge/skills. My skill set consist of various front-end development technologies, ranging from basic HTML to complex Angular.js. Along with web development, I have a deep understanding of engineering fundamentals. Please contact me at hardik.srana@gmail.com for my complete resume.	  
 						</p>
 					</div>
 				</div>
