--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 					<h4 class="edu"><a href="http://www.njit.edu/" target="_blank">New Jersey Institute of Technology, Newark NJ</a></h4>
 					<br><p><b>B.S. Engineering Technology - Computer Technology</b>
 					<br>Specialization: Web Development
-					<br>Anticipated graduation date: May 16, 2017
+					<br>Graduated in Dec 2016
 					<br>GPA: 3.8/4.0
 					</p>
 				
